--- a/meow-backend-dotnet/appsettings.Development.json
+++ b/meow-backend-dotnet/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=pawsdb"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
