--- a/meow-backend-dotnet/appsettings.json
+++ b/meow-backend-dotnet/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=pawsdb"
+    "DefaultConnection": "Host=db;Port=5432;Database=pawsdb"
   },
 
   "Jwt": {
